syntax = "proto3";

package solver.app.v2;

import "cosmos/orm/v1/orm.proto";

option go_package = "solver/app/v2";

message Cursor {
  option (cosmos.orm.v1.table) = {
    id: 1;
    primary_key: { fields: "chain_id,conf_level" }
  };

  uint64 chain_id     = 1;
  uint32 conf_level   = 2;
  uint64 block_height = 3;
}
